# q2-vizard

./: .gitattributes  LICENSE  MANIFEST.in  Makefile  README.md  get_package_name.py  get_package_version.py  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci-vizard.yml  ci.yml  cron-vizard.yml  cron-workflow.yml
ci/recipe/: meta.yaml  parse_pyproject_toml.py
environment-files/: 2024.10-vizard-environment.yml  2024.5-vizard-environment.yml  2024.5-vizard-seed-environment.yml
q2_vizard/: __init__.py  _curveplot.py  _examples.py  _heatmap.py  _lineplot.py  _scatterplot.py  _util.py  _version.py  boxplot.py  heatmap.py  lineplot.py  plugin_setup.py  scatterplot.py
q2_vizard/assets/: index.html  spec.json
q2_vizard/assets/boxplot/: horizontalSpec.json  index.html  spec.json  verticalSpec.json
q2_vizard/assets/curveplot/: spec.json
q2_vizard/assets/heatmap/: heatmap_spec.json  index.html  spec.json
q2_vizard/assets/lineplot/: index.html  spec.json
q2_vizard/assets/scatterplot/: index.html  spec.json
q2_vizard/assets/scatterplot_2d/: index.html  spec.json
q2_vizard/tests/: __init__.py  test_boxplot.py  test_curveplot.py  test_examples.py  test_heatmap.py  test_lineplot.py  test_scatterplot.py  test_util.py
q2_vizard/tests/data/: lineplot-md.tsv  sample-md.tsv
