[build-system]
requires = [
    'setuptools>=64',
    'setuptools_scm>=8',
    'versioneer[toml]'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'q2-vizard'
authors = [
    {name = 'Liz Gehret', email = 'elizabeth.gehret@nau.edu'}
]
description = 'QIIME 2 Plugin used for visualizations.'
readme = 'README.md'
license = {file = 'LICENSE'}
dynamic = ['version']

[tool.setuptools_scm]

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'q2_vizard/_version.py'
versionfile_build = 'q2_vizard/_version.py'
tag_prefix = ''
parentdir_prefix = 'q2-vizard-'

[project.urls]
Homepage = 'https://qiime2.org'
Documentation = 'https://docs.qiime2.org'
Repository = 'https://github.com/qiime2/q2-vizard'

[project.entry-points.'qiime2.plugins']
q2-vizard = 'q2_vizard.plugin_setup:plugin'
